Fixes last bugs and translation for 0.3.0.alpha2
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1679 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -986,6 +986,7 @@ arb:
     invoice_contact: 'العنوان للفاتورة'
     invoice_contact_id: 'العنوان للفاتورة'
     invoiced: 'مفوتر'
+    #>invoices_count: 'Invoices count'
     is_debit: 'مدين'
     item_listing: 'عقد الاستخراج'
     item_listing_id: 'عقد استخراج'
@@ -1352,6 +1353,7 @@ arb:
     with_commission: 'تشمل عمولة'
     with_deposit: 'استخدام الاقتطاعات المصرفية'
     with_tracking: 'مع التتبع'
+    #>with_transport: 'With transport'
     #>work_center_id: 'Work center'
     x: 'X الوضع'
     y: 'Y الوضع'
