--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -598,7 +598,7 @@ eng:
     invoice_contact: 'Sales invoice contact'
     invoice_contact_id: 'Sales invoice contact'
     invoiced: 'Invoiced'
-    #>invoices_count: 'Invoices count'
+    invoices_count: 'Invoices count'
     is_debit: 'Is debit'
     item_listing: 'Item listing'
     item_listing_id: 'Item listing'
@@ -956,7 +956,7 @@ eng:
     with_commission: 'With commission'
     with_deposit: 'With deposit'
     with_tracking: 'With tracking'
-    #>with_transport: 'With transport'
+    with_transport: 'With transport'
     work_center_id: 'Work center'
     x: 'X'
     y: 'Y'
