--- a/config/locales/spa/rights.yml
+++ b/config/locales/spa/rights.yml
@@ -39,8 +39,8 @@ spa:
     #>manage_estimates: 'Create and update estimates'
     #>manage_events: 'Manage events'
     #>manage_financial_years: 'Manage and close financial years'
-    #>manage_incoming_delivery_modes: '(((MANAGE_INCOMING_DELIVERY_MODES)))'
-    #>manage_incoming_payment_modes: '(((MANAGE_INCOMING_PAYMENT_MODES)))'
+    #>manage_incoming_delivery_modes: 'Manage incoming delivery modes'
+    #>manage_incoming_payment_modes: 'Manage incoming payment modes'
     #>manage_incoming_payments: 'Manage sale payments'
     #>manage_inventories: 'Manage inventories'
     #>manage_journal_entries: 'Manaeg journal entries'
@@ -51,9 +51,9 @@ spa:
     #>manage_mandates: 'Manage mandates'
     #>manage_observations: 'Manage observations'
     #>manage_operations: 'Manage operations'
-    #>manage_outgoing_delivery_modes: '(((MANAGE_OUTGOING_DELIVERY_MODES)))'
-    #>manage_outgoing_payment_modes: '(((MANAGE_OUTGOING_PAYMENT_MODES)))'
-    #>manage_outgoing_payments: '(((MANAGE_OUTGOING_PAYMENTS)))'
+    #>manage_outgoing_delivery_modes: 'Manage outgoing delivery modes'
+    #>manage_outgoing_payment_modes: 'Manage disbursement modes'
+    #>manage_outgoing_payments: 'Manage disbursements'
     #>manage_prices: 'Manage prices'
     #>manage_product_categories: 'Manage product categories'
     #>manage_products: 'Manage products'
