Add OpenDocuent export for Kame
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1681 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/support.yml
+++ b/config/locales/eng/support.yml
@@ -54,6 +54,7 @@ eng:
     export:
       csv: 'CSV'
       false_value: 'FALSE'
+      ods: 'Spreadsheet ODF'
       title: 'Export'
       true_value: 'TRUE'
       xcsv: 'Excel CSV'
