Adds some state columns in sales orders Kame
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1683 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -639,7 +639,7 @@ fra:
     line_6: 'Code postal ET ville'
     line_6_city: 'Ville'
     line_6_code: 'Code postal'
-    lines: 'Lignes d''inventaire'
+    lines: 'Lignes'
     listing: 'Extraction'
     listing_id: 'Extraction'
     listing_node_items: 'Éléments de noeud d''extraction'
